--- a/index.html
+++ b/index.html
@@ -122,10 +122,11 @@
   <header>
     <img src="https://i.imgur.com/zuvsrvn.png" style="width:200px;" alt="VideoNotes Logo">
     <h1>VideoNotes</h1>
-    <p class="lead">VideoNotes is the app that turns any YouTube video into a clear, searchable, and summarized document. Just paste the URL and the app does the rest.</p>
   </header>
 
   <main>
+    <p class="lead">VideoNotes is the app that turns any YouTube video into a clear, searchable, and summarized document. Just paste the URL and the app does the rest.</p>
+    
     <section>
       <h2>Video to Text</h2>
       <p>Simple and direct. Copy the link of any YouTube video and let the app automatically convert it into text. Save, share, or summarize the content however you like—no hassle.</p>
@@ -136,9 +137,11 @@
       <p>Save time with Artificial Intelligence. With VideoNotes, AI automatically summarizes those long videos you usually postpone due to lack of time, offering you a condensed version in just a few lines so you don’t miss what matters most.</p>
     </section>
     
-    <div style="align:center;">
-      <img src="https://i.imgur.com/FZt3MDe.png" style="width:200px;">
-    </div>
+    <div align="center">
+  <img src="https://i.imgur.com/7m6KfHc.png" height="400"><img src="https://i.imgur.com/PUkN9kd.png" height="410">
+</div>
+
+
     <section>
       <h2>Tech Stack</h2>
       <ul class="tech-stack">
